welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: not found: value Math0abs
  if (Math0abs(100-n)>10){
      ^